--- a/style.css
+++ b/style.css
@@ -194,3 +194,115 @@
 .developer-stats .more .mores .passion-info p {
   color: gray;
 }
+
+.items-section {
+  width: 100%;
+  height: auto;
+  padding: 0 20px;
+}
+
+.item-section .item-actions {
+  width: 100%;
+  height: auto;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.item-section .item-actions .inputs {
+  flex-basis: 40%;
+}
+
+.item-section .item-actions .inputs input[type="text"] {
+  width: 70%;
+  outline: none;
+  height: 30px;
+  border: 1px solid black;
+  border-radius: 10px 0 0 10px;
+  padding-left: 10px;
+}
+
+.item-section .item-actions .inputs input[type="button"] {
+  flex-basis: 30%;
+  outline: none;
+  border: none;
+  background-color: black;
+  color: white;
+  height: 30px;
+  border-radius: 0 10px 10px 0;
+  padding: 0 14px;
+}
+
+.item-section .item-actions select {
+  height: 40px;
+  padding: 0 10px;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+}
+
+.item-section .item-actions select option span {
+  color: gray;
+}
+
+.items-div {
+  width: 100%;
+  height: auto;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 15px;
+}
+
+.items-div .item {
+  width: 100%;
+  height: auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 10px;
+}
+
+.items-div .item .img {
+  width: 100%;
+  height: 200px;
+  margin-bottom: 10px;
+}
+
+.items-div .item .img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px 10px 0 0;
+}
+
+.items-div .item .item-info {
+  padding: 10px;
+}
+
+.items-div .item .item-info h2 {
+  margin-bottom: 10px;
+}
+
+.items-div .item .buttons {
+  width: 100%;
+  padding: 0 10px 10px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.items-div .item .buttons button {
+  outline: none;
+  border: none;
+  padding: 10px 12px;
+  border-radius: 7px;
+  background-color: gainsboro;
+  color: black;
+  cursor: pointer;
+}
+
+.items-div .item .buttons a:last-child button {
+  background-color: black;
+  color: white;
+}
