--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@
   height: 30px;
   border-radius: 0 10px 10px 0;
   padding: 0 14px;
+  cursor: pointer;
 }
 
 .item-section .item-actions select {
